# healthcare-rcm-lakehouse

./: .gitignore  README.md  explanation.txt  interview-guide.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
adf/dataset/: ds_archive_folder.json  ds_azuresql_generic.json  ds_bronze_folder.json  ds_bronze_parquet_generic.json  ds_config_metadata.json  ds_configs.json
adf/linkedService/: ls_adls_gen2.json  ls_azuresql_emr.json  ls_databricks.json  (+1 more)
config/: env.json  ingestion_metadata.csv
configs/: configs.csv
data_generation/: generate_claims.py  generate_emr_seed_sql.py  load_synthea_to_azuresql.py  run_synthea.md  telemetry_simulator.py
databricks/: databricks.yml  pyproject.toml
databricks/bronze/: 01_autoloader_claims.py  02_api_reference_npi_icd.py
databricks/common/: __init__.py  audit.py  config.py  dq.py  kpis.py  masking.py  scd.py
databricks/gold/: 01_gold_star_schema.py  02_gold_kpis.py  03_gold_kpi_denial_recompute.py
databricks/migrations/: 2026_06_backfill_row_hash_xxhash64.py
databricks/silver/: 01_silver_patient.py  02_silver_provider_department.py  03_silver_encounter.py  04_silver_transaction_claim.py  masking_policies.sql
databricks/streaming/: telemetry_stream.py
docs/: DEPLOY.md  PHASES.md  architecture.md  ingestion-sources.md  streaming-rationale.md
infra/: main.bicep  main.bicepparam  provision.ps1  teardown.ps1
sql/: 01_create_emr_tables.sql  02_audit_stored_proc.sql  04_audit_watermark.sql
tests/: conftest.py  test_dq.py  test_kpis.py  test_masking.py  test_scd.py
(+6 files in other folders)
